<resources>
    <string name="app_name">TodoList</string>
    <string name="action_flush">Flush database</string>
    <string name="action_flush_prompt">Do you really want to delete every note ?</string>
    <string name="title_activity_add">Add a note</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_prompt">Do you really want to delete this note ?</string>
    <string name="notification_set_done">Set As Done</string>
</resources>
