...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/title_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_title"
...
            app:met_underlineColor="?android:attr/textColorPrimaryInverse" />


    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/content_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
...
